v2.0.5
Able to parse old log format without model
Added version information to vcontrol-cli 

v2.0.6
More sanity check on import data

v2.0.7
More robust vbar control detection on windows.

v2.2.0
Added Graph
Added remember window size

v2.3.0
Added ui data
Added vbar log

v2.4.0
Zoom in ui data

v2.5.0
Ability to see all logs
Date out - Season in
Red background on severe problem in vbarlog

v2.6.0
UI - able to hide graphs
UI - Min/Max/Average when selecting range
UI - Red if unable to zoom

v2.7.0
New way to find vcontrol (search for vcontrol.id on all drives)
Convert vbar log to unicode before inserting